# kime

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
build-docker/arch/: Dockerfile
docs/: CHANGELOG.md
scripts/: build.sh
src/: CMakeLists.txt
src/engine/backends/hangul/data/: sebeolsik-3-90.yaml  sebeolsik-3-91.yaml
src/engine/backends/hangul/src/: state.rs
src/engine/capi/: Cargo.toml  build.rs
src/engine/capi/src/: lib.rs
src/engine/core/src/: config.rs  lib.rs
src/engine/core/tests/: sebeolsik_3_90.rs
src/frontends/wayland/: Cargo.toml
src/frontends/wayland/src/: input_method_v1.rs  input_method_v2.rs  main.rs
src/frontends/xim/: Cargo.toml
src/frontends/xim/src/: handler.rs  main.rs
src/tools/candidate-window/: Cargo.toml
src/tools/candidate-window/src/: main.rs
src/tools/check/: Cargo.toml
src/tools/check/src/: main.rs
src/tools/indicator/: Cargo.toml
src/tools/indicator/src/: main.rs
src/tools/kime/: Cargo.toml
src/tools/kime/src/: main.rs
src/tools/properties_writer/src/: main.rs
src/tools/version/: Cargo.toml
src/tools/version/src/: lib.rs
