[package]
name = "kime-engine-capi"
description = "Kime engine library"
version = "0.5.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "kime_engine"
crate-type = ["cdylib"]

[dependencies]
kime-engine-core = { path = "../core" }

[build-dependencies]
bindgen = { version = "0.69.4", default-features = false }
cbindgen = { version = "0.26.0", default-features = false }
